# rtoon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  cliff.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
examples/: main.rs
examples/parts/: arrays.rs  arrays_of_arrays.rs  decode_strict.rs  delimiters.rs  empty_and_root.rs  length_marker.rs  mixed_arrays.rs  objects.rs  round_trip.rs  tabular.rs  types.rs
scripts/: generate-changelog.sh
src/: constants.rs  error.rs  lib.rs  types.rs  utils.rs
src/decode/: mod.rs  parser.rs  scanner.rs  validation.rs
src/encode/: mod.rs  primitives.rs  writer.rs
src/types/: json_value.rs  mod.rs  options.rs
src/utils/: literal.rs  mod.rs  string.rs  validation.rs
tests/: arrays.rs  delimiters.rs  errors.rs  numeric.rs  objects.rs  real_world.rs  round_trip.rs  unicode.rs
