[package]
name = "rtoon"
version = "0.1.0"
edition = "2021"
authors = ["Shreyas K S <ks.shreyas0@gmail.com>"]
license = "MIT"
description = "Token-Oriented Object Notation - A compact, human-readable format for LLM data with 30-60% fewer tokens than JSON"
repository = "https://github.com/shreyasbhat0/rtoon"
keywords = ["llm", "serialization", "tokens", "ai", "encoding"]
categories = ["encoding", "parser-implementations", "text-processing"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
thiserror = "2.0.17"


[[example]]
name = "examples"
path = "examples/main.rs"
